--- a/examples/barebone.html
+++ b/examples/barebone.html
@@ -16,9 +16,9 @@
     </div>
 
     <script type="module">
-      import CodeEditor from "../src/index.js";
+      import Yace from "../src/index.js";
 
-      const editor = new CodeEditor("#editor", {
+      const editor = new Yace("#editor", {
         value: "Bare bone text editor with line number without highlighting\n",
         styles: {
           fontSize: "20px",
