--- a/examples/highlightjs.html
+++ b/examples/highlightjs.html
@@ -22,11 +22,11 @@
     </div>
 
     <script type="module">
-      import CodeEditor from "../src/index.js";
+      import Yace from "../src/index.js";
 
       const highlighter = (value) => hljs.highlight("javascript", value).value;
 
-      const editor = new CodeEditor("#editor", {
+      const editor = new Yace("#editor", {
         value:
           "// highlight code with highlightjs\n\nfunction sum(a, b) {\n  return a + b\n}\n\nlet hello = 'world'\n",
         styles: {
