add new example link to landing

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,6 +21,10 @@
         min-height: 410px;
         box-sizing: border-box;
       }
+
+      .links {
+        max-width: 350px;
+      }
     </style>
   </head>
   <body>
@@ -33,7 +37,7 @@
     </main>
 
     <h3>Live Demo</h3>
-    <ul>
+    <ul class="links">
       <li>
         <a href="https://codesandbox.io/s/yace-highlightjs-jvqp0" rel="nofollow"
           >Using <code>highlight.js</code> as highlighter</a
@@ -47,6 +51,13 @@
       <li>
         <a href="https://codesandbox.io/s/yace-mdhl-ftdr4" rel="nofollow"
           >Building tiny ~2KB markdown editor</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://codesandbox.io/s/yace-mdhl-highlightjs-xocgf"
+          rel="nofollow"
+          >Building markdown editor with highlighting code in code blocks</a
         >
       </li>
       <li>
