feat: history more accurate
history plugin should use before all plugins

--- a/examples/plugins.html
+++ b/examples/plugins.html
@@ -21,6 +21,8 @@
       import Yace from "../src/index.js";
       import tab from "../src/plugins/tab.js";
       import cutLine from "../src/plugins/cutLine.js";
+      import preserveIndent from "../src/plugins/preserveIndent.js";
+      import history from "../src/plugins/history.js";
 
       const editor = new Yace("#editor", {
         value:
@@ -29,7 +31,7 @@
           fontSize: "20px",
         },
         highlighter: highlight,
-        plugins: [tab(), cutLine()],
+        plugins: [history(), tab(), cutLine(), preserveIndent()],
         lineNumbers: true,
       });
 
